feature/AGRO-1 created basic scss and delete avatares

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,5 +1,5 @@
-@import '../src/assets/styles/main.scss';
+@import '../../assets/styles/colors';
 
-.homeView {
-  background-color: $theme-color;
-}
+//.homeView {
+//  background-color: $theme-color;
+//}
