feature/AGRO-1 added styles and test components

--- a/src/components/Footer/FooterComponent.scss
+++ b/src/components/Footer/FooterComponent.scss
@@ -1,5 +1,5 @@
-@import "../../assets/styles/style";
+@import "../assets/scss/style";
 
-.HeaderComponent {
-  background-color: $theme-color;
+.FooterComponent {
+  background-color: $theme1-color;
 }
