--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,4 +1,4 @@
-@import '../../assets/styles/colors';
+@import 'src/components/assets/scss/style';
 
 //.homeView {
 //  background-color: $theme-color;
