--- a/src/components/Footer/FooterComponent.scss
+++ b/src/components/Footer/FooterComponent.scss
@@ -1,5 +1,20 @@
 @import "../assets/scss/style";
 
 .FooterComponent {
-  background-color: $theme1-color;
+  background-color: $theme3-color;
+
+  .column1, .column2, .column3 {
+    margin: 0 6rem;
+  }
+
+  .column2, .column3 {
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+      > li a {
+        text-decoration: none;
+        color: $white;
+      }
+    }
+  }
 }
