feature/AGRO-4 fix sass

--- a/src/components/Footer/FooterComponent.scss
+++ b/src/components/Footer/FooterComponent.scss
@@ -1,4 +1,4 @@
-@import "../assets/scss/style";
+@import "../assets/scss/style.scss";
 
 .FooterComponent {
   background-color: $theme2-color;
@@ -61,7 +61,7 @@
   }
 
   .footer-signature {
-    align-items: center;
-    position: relative
+    //align-items: center;
+    //height: 100vh;
   }
 }
