--- a/src/components/assets/scss/_colors.scss
+++ b/src/components/assets/scss/_colors.scss
@@ -3,6 +3,27 @@ $theme2-color: #2BAE66;
 $theme3-color: #1F7A48;
 $theme4-color: #023535;
 
+$cyan: #2ac0f1;
+$cyan-pf: #64ffda;
+$orange: #FFA401;
+$white-green: #E6F3EF;
+$green: #00875a;
+$gray: #787878;
+$white-red: #fce9eb;
+$red: #e61f37;
+$gray-shadow: #8fabc34d;
+$white: white;
+
+$theme-pf: $cyan-pf;
+$theme-hover-pf: #152b4c;
+$theme-name-pf: #ccd6f6;
+$subTheme-pf: #41629b;
+$theme-subTitle-pf: #8892b0;
+$theme-description-pf: #8892b0;
+$theme-selection-pf: #112240;
+$theme-side-bar-pf: #112240;
+$theme-project-card : #0e2342;
+
 $white: white;
 
 .RQ-theme1 {
