--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,4 +1,4 @@
-@import 'src/components/assets/scss/style';
+@import '../../components/assets/scss/style.scss';
 
 //.homeView {
 //  background-color: $theme-color;
