--- a/src/components/Footer/FooterComponent.scss
+++ b/src/components/Footer/FooterComponent.scss
@@ -145,6 +145,13 @@
         > li a {
           text-decoration: none;
           color: $white;
+          &:hover {
+            color: $theme3-color;
+            transition: 0.5s;
+          }
+          &:not(:hover) {
+            transition: 0.5s;
+          }
         }
       }
     }
