--- a/src/components/Carousel/CarouselComponent.scss
+++ b/src/components/Carousel/CarouselComponent.scss
@@ -1,15 +1,13 @@
 @import "../assets/scss/style.scss";
 
-.CarouselComponent {
-
-  .carousel-container {
-    background: yellow;
+.Carousel2Component {
+  .carousel2-container {
     display: flex;
     flex-wrap: nowrap;
     overflow: hidden;
   }
 
-  > .carousel-itemx {
+  > .carousel2-itemx {
     height: 3rem;
     min-width: 100%;
     width: 100%;
@@ -18,11 +16,33 @@
     justify-content: center;
     transition: 1s cubic-bezier(0.39, 0.575, 0.565, 1);
   }
-
 }
 
-@include media-breakpoint-down(sm) {
-}
-
-@include media-breakpoint-up(sm) {
+.CarouselComponent {
+  margin: 3rem 0;
+  h2 {
+    margin: 1rem 0;
+  }
+  p {
+    margin:1rem 0 1.5rem 0;
+  }
+  @include media-breakpoint-up(sm) {
+    margin: 3rem 0;
+    h2 {
+      margin: 2rem 0;
+    }
+    p {
+      margin: 2rem 0;
+    }
+  }
+  .carousel-list {
+    img {
+      margin: 0 1rem;
+      width: 5.5rem;
+      @include media-breakpoint-up(sm) {
+        width: 7rem;
+        margin: 0 4rem;
+      }
+    }
+  }
 }
