--- a/src/components/assets/scss/_fonts.scss
+++ b/src/components/assets/scss/_fonts.scss
@@ -1,4 +1,5 @@
 @import "_grid";
+@import "_amp_functions";
 
 $main-font: "Roboto";
 $font-bold: 700;
@@ -140,5 +141,19 @@ p {
 
 .RQ-one-line {
   white-space: nowrap;
+}
+
+.RQ-f-u14-o16 {
+  font-size: 14px;
+  @include media-breakpoint-up(sm) {
+    font-size: 16px;
+  }
+}
+
+.RQ-f-u24-o40 {
+  font-size: 24px;
+  @include media-breakpoint-up(sm) {
+    font-size: 40px;
+  }
 }
 
