feature/AGRO-17 home component finished

--- a/src/components/assets/scss/_colors.scss
+++ b/src/components/assets/scss/_colors.scss
@@ -45,3 +45,13 @@ $white: white;
 .RQ-white {
   color: $white;
 }
+
+.RQ-hover-theme {
+  &:hover {
+    color: $theme3-color;
+    transition: 0.8s;
+  }
+  &:not(:hover) {
+    transition: 0.5s;
+  }
+}
