--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,5 +1,7 @@
 @import '../../components/assets/scss/style.scss';
 
-//.homeView {
-//  background-color: $theme-color;
-//}
+.HomeView {
+  .agrobime-main {
+    margin: 2rem 0 2rem 0;
+  }
+}
